--- a/yarara-dashboard/package.json
+++ b/yarara-dashboard/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@shadcn/ui": "^0.0.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
