--- a/yarara-dashboard-bff/package.json
+++ b/yarara-dashboard-bff/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12"
   }
