--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,24 +4,26 @@ services:
   clarityfuzzer:
     build: .
     container_name: clarityfuzzer
-    command: ["python", "/app/ClarityFuzzer/ClarityTranspiler/ClarityTranspiler.py"]
+    volumes:
+      - ./ClarityFuzzer:/app/ClarityFuzzer
+    command: ["python", "/app/ClarityFuzzer/ClarityTranspiler/ClarityTranspiler.py", "/app/ClarityFuzzer/example.clar"]
 
   yarara-dashboard-bff:
-    image: node:18
+    image: node:20
     container_name: yarara-dashboard-bff
     working_dir: /app/yarara-fe/yarara-dashboard-bff
     volumes:
-      - ./yarara-fe/yarara-dashboard-bff:/app/yarara-fe/yarara-dashboard-bff
+      - ./yarara-fe:/app/yarara-fe
     ports:
       - "5000:5000"
-    command: ["npm", "start"]
+    command: ["sh", "-c", "npm install && node server.js"]
 
   yarara-dashboard:
-    image: node:18
+    image: node:20
     container_name: yarara-dashboard
     working_dir: /app/yarara-fe/yarara-dashboard
     volumes:
-      - ./yarara-fe/yarara-dashboard:/app/yarara-fe/yarara-dashboard
+      - ./yarara-fe:/app/yarara-fe
     ports:
       - "3000:3000"
-    command: ["npm", "run", "dev"]
+    command: ["sh", "-c", "npm install && npm run dev"]
